--- a/luizalabs_web/templates/home.html
+++ b/luizalabs_web/templates/home.html
@@ -1,5 +1,3 @@
-
-
 <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <html> 
@@ -12,8 +10,8 @@
         
         {% load static %}
         
-        <script src="{% static 'js/facebookchat.js' %}" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+        <script src="{% static 'js/facebook.js' %}" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/facebook.css' %}" />
     </head>
     <body>
         <h2>Luizalabs assessment</h2><br/>
@@ -48,7 +46,7 @@
                 </div>
                 <div id="fb-root"></div>
             </div>
-            <a href="https://www.linkedin.com/in/pabatista/" title="Envia uma mensagem" class="ctrlq fb-button"></a>
+            <a href="https://www.linkedin.com/in/pabatista/" title="Enviar uma mensagem" class="ctrlq fb-button"></a>
         </div>
     </body>
 </html>
