--- a/luizalabs_web/templates/home.html
+++ b/luizalabs_web/templates/home.html
@@ -2,7 +2,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <html> 
     <head>
-        <title>Luizalabs assessment</title>
+        <title>Luizalabs assessment by Paulo Batista</title>
         <link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" 
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" 
@@ -12,17 +12,41 @@
         
         <script src="{% static 'js/facebook.js' %}" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'css/facebook.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     </head>
     <body>
-        <h2>Luizalabs assessment</h2><br/>
-        <h3>Luizalab chatbot by Paulo Batista</h3>
-        <h3>Django 1.9.0</h3>
-        <h3>Python 2.7.6</h3>
-        <h3>Server virtualized on Cloud9</h3>
-        <h3>https://ai-projects-paulobatista.c9users.io/luizalabs_web/</h3>
-        <br/>
-        <h3>Complete code on github</h3>
-        <h3>https://github.com/paulo-batista/ai-projects/tree/master/luizalabs_bot</h3>
+        
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-3">Luizalabs assessment</h1>
+                <p class="lead">Facebook bot challenger by Paulo Batista</p>
+            </div>
+        </div>
+        
+        <div class="container-fluid main" >
+            Olá pessoal do Luizalabs, sejam bem-vindos ! <br>
+            
+            Facebook bot pronto para testes, mas também vou deixar aqui alguns comentários 
+            sobre a app.<br.
+       
+            <div class="" >
+                As versões utilizadas pela app foram: <br>
+                <ul>
+                    <li>Django 1.9</li>
+                    <li>Python 2.7</li>
+                    <li>Bootstrap 4</li>
+                    
+                </ul>
+           
+            <div class="" >
+            Utilizei VM da <a href="https://c9.io/">Cloud9</a> com Ubuntu 14.04.5 LTS <br>
+            A primeira parte do código  
+            </div>  
+            <div class="um"></div>
+            
+            
+        </div>
+        
         
         <div class="fb-livechat">
             <div class="ctrlq fb-overlay"></div>
@@ -48,5 +72,11 @@
             </div>
             <a href="https://www.linkedin.com/in/pabatista/" title="Enviar uma mensagem" class="ctrlq fb-button"></a>
         </div>
+        
+        <blockquote>
+          
+          <footer class="footer"><a href="#">Política de Privacidade</a></footer>
+        </blockquote>
+        
     </body>
 </html>
