Decoding issues repaired

--- a/luizalabs_web/templates/home.html
+++ b/luizalabs_web/templates/home.html
@@ -24,29 +24,29 @@
         </div>
         
         <div class="container-fluid main" >
-            Olá pessoal do Luizalabs, sejam bem-vindos ! <br>
+            <p>Olá pessoal do Luizalabs, sejam bem-vindos !</p> 
             
-            Facebook bot pronto para testes, mas também vou deixar aqui alguns comentários 
-            sobre a app.<br.
+            <p>Facebook bot pronto para testes, Abaixo alguns comentários sobre o Setup.</p>
        
-            <div class="" >
+            <div class="lista" >
                 As versões utilizadas pela app foram: <br>
                 <ul>
                     <li>Django 1.9</li>
                     <li>Python 2.7</li>
                     <li>Bootstrap 4</li>
-                    
                 </ul>
+            </div>
            
-            <div class="" >
-            Utilizei VM da <a href="https://c9.io/">Cloud9</a> com Ubuntu 14.04.5 LTS <br>
-            A primeira parte do código  
-            </div>  
-            <div class="um"></div>
-            
-            
+            <p>Utilizei VM da <a href="https://c9.io/">Cloud9</a> com Ubuntu 14.04.5 LTS </p>
+            <p>Foram criadas duas apps em Django/Python</p>
+            <p>A primeira para web (luizalabs_web) cria uma página base usando HTML, CSS e Javascript. </p>
+            <p>Já a segunda app (luizalabs_bot) faz uso das APIs do facebook e do Google com chamadas JSON. </p>
+            <p>Optei por usar APIs do Google para dar uma maior personalizada, foi bem divertido unir as APIs.</p>
+            <p>O código está disponível no github: <a href="https://github.com/paulo-batista/ai-projects">https://github.com/paulo-batista/ai-projects</a> </p>
+            <p>Abraço a todos !</p>
+            <a href="https://www.linkedin.com/in/pabatista/" target="_blank">Paulo</a>
+      
         </div>
-        
         
         <div class="fb-livechat">
             <div class="ctrlq fb-overlay"></div>
@@ -66,17 +66,12 @@
                     </blockquote>
                 </div>
                 <div class="fb-credit">
-                    <a href="https://www.linkedin.com/in/pabatista/" target="_blank">Facebook Chat Widget </a>
+                    <a href="https://www.linkedin.com/in/pabatista/" target="_blank">Luizalabs bot</a>
                 </div>
                 <div id="fb-root"></div>
             </div>
-            <a href="https://www.linkedin.com/in/pabatista/" title="Enviar uma mensagem" class="ctrlq fb-button"></a>
+            <a href="https://www.linkedin.com/in/pabatista/" title="Enviar mensagem" class="ctrlq fb-button"></a>
         </div>
-        
-        <blockquote>
-          
-          <footer class="footer"><a href="#">Política de Privacidade</a></footer>
-        </blockquote>
         
     </body>
 </html>
