Update after tests...

--- a/luizalabs_web/templates/home.html
+++ b/luizalabs_web/templates/home.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         
-        <div class="container-fluid main" >
+        <div class="container main" >
             <p>Olá pessoal do Luizalabs, sejam bem-vindos !</p> 
             
             <p>Facebook bot pronto para testes, Abaixo alguns comentários sobre o Setup.</p>
@@ -38,11 +38,32 @@
             </div>
            
             <p>Utilizei VM da <a href="https://c9.io/">Cloud9</a> com Ubuntu 14.04.5 LTS </p>
-            <p>Foram criadas duas apps em Django/Python</p>
-            <p>A primeira para web (luizalabs_web) cria uma página base usando HTML, CSS e Javascript. </p>
-            <p>Já a segunda app (luizalabs_bot) faz uso das APIs do facebook e do Google com chamadas JSON. </p>
-            <p>Optei por usar APIs do Google para dar uma maior personalizada, foi bem divertido unir as APIs.</p>
-            <p>O código está disponível no github: <a href="https://github.com/paulo-batista/ai-projects">https://github.com/paulo-batista/ai-projects</a> </p>
+            <p>Duas apps em Django/Python para resolver o exercício</p>
+            <p>Uma app web (luizalabs_web) responsável pela criação da página base em HTML, CSS e Javascript. </p>
+            <p>App (luizalabs_bot) engine de conexão as API's do Facebook, Google e chamadas JSON. </p>
+            <p>O código está bem simples, e espero ter alcançado os objetivos do Exercício.</p>
+            
+            <p class="negrito">Para dar início, por favor, seguir os passos abaixo:</p>
+            
+            <p>
+                <ol>
+                    <li>Sair do facebook caso esteja logado.</li>
+                    <li>Selecione o widget de mensagem e envie uma mensagem como "Boa tarde, Olá, etc..." </li>
+                    <li>Quando solicitado, por favor, logar com o usuário teste no facebook:</li>
+                    <ul>
+                        <li><b>usuário:</b> apptester2017.br@gmail.com</li>
+                        <li><b>senha:</b> apptester2017br</li>
+                    </ul>
+                
+            
+                    <p class="informacao"><b>Importante:</b> Como a app ficou muito customizada, não solicitei publicação dela pelo Facebook.
+                    Portanto somente usuários testers pode usar. Caso precisem me informem um usuário do facebook
+                    e eu posso adicionar, sem problemas.</p>
+                   
+                    <li>Abra o facebook usando as credenciais do usuário teste e BOAS COMPRAS !! ;)</li>
+                </ol>
+            </p>
+            <p>O código para análise está disponível no github: <a href="https://github.com/paulo-batista/ai-projects">https://github.com/paulo-batista/ai-projects</a> </p>
             <p>Abraço a todos !</p>
             <a href="https://www.linkedin.com/in/pabatista/" target="_blank">Paulo</a>
       
