Update after tests...

--- a/luizalabs_web/templates/home.html
+++ b/luizalabs_web/templates/home.html
@@ -61,6 +61,7 @@
                     e eu posso adicionar, sem problemas.</p>
                    
                     <li>Abra o facebook usando as credenciais do usuário teste e BOAS COMPRAS !! ;)</li>
+                    <li>Ao terminar suas consultas, por favor, finalize dizendo obrigado ! </li>
                 </ol>
             </p>
             <p>O código para análise está disponível no github: <a href="https://github.com/paulo-batista/ai-projects">https://github.com/paulo-batista/ai-projects</a> </p>
